only numbers allowed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table>
         <tr>
-            <td colspan="3"><input type="text" onkeypress="keyBoard()" id="display" /></td>
+            <td colspan="3"><input type="text" onkeypress="javascript:return keyBoard(event)" id="display" /></td>
             <td><input type="button" value="c" onclick="clr()" /> </td>
         </tr>
         <tr>
